disable unused endpoints
